--- a/frontend/src/app/styles/_mixins.scss
+++ b/frontend/src/app/styles/_mixins.scss
@@ -1,4 +1,5 @@
 @use 'sass:map';
+@import './variables';
 
 $breakpoints: (
   sm: 576px,
@@ -13,6 +14,12 @@ $breakpoints: (
   }
 }
 
+@mixin media-query-tablet($min-size, $max-size) {
+  @media (min-width: map.get($breakpoints, $min-size)) and (max-width: map.get($breakpoints, $max-size)) {
+    @content;
+  }
+}
+
 @mixin flex-align($justify: center, $align: center) {
   display: flex;
   justify-content: $justify;
@@ -21,4 +28,9 @@ $breakpoints: (
 @mixin self-align($justify: center,) {
   display: flex;
   justify-self: $justify;
+}
+
+@mixin word-highlight($big: 24px,) {
+  font-size: $big;
+  color: $hover-red;
 }
