--- a/frontend/src/app/styles/_variables.scss
+++ b/frontend/src/app/styles/_variables.scss
@@ -6,3 +6,9 @@ $black-text: #020301;
 $white-text: #f9f9f9;
 $subscription-margin-bottom: 8px;
 $desktop-font-size: 20px;
+
+$padd-inl-phone: 24px;
+$padd-inl-desk: 80px;
+
+$icon-size-big: 24px;
+$icon-size-small: 16px;
