--- a/frontend/src/shared/ui-kit/NavLinks/navLinks.module.scss
+++ b/frontend/src/shared/ui-kit/NavLinks/navLinks.module.scss
@@ -1,9 +1,9 @@
 @import '../../../app/styles/_mixins.scss';
-@import '../../../app/styles/variables';
+@import '../../../app/styles/variables.scss';
 
 .header__nav {
   display: flex;
-  gap: 20px
+  gap: 20px;
 }
 
 .footer__nav {
@@ -21,7 +21,7 @@
   .footer__nav {
     display: flex;
     flex-direction: column;
-    gap: 20px
+    gap: 20px;
   }
 
   .nav_link:hover {
