--- a/frontend/src/app/styles/_mixins.scss
+++ b/frontend/src/app/styles/_mixins.scss
@@ -35,35 +35,11 @@ $breakpoints: (
   color: $hover-red;
 }
 
-// #region Міксини від Максима ))
 @mixin hover($property, $toValue, $animDuration: 0.3s) {
   // для створення анімації при наведенні. Синтаксис: @include hover(transform, scale(1.1), 0.5)
   transition: #{$property} $animDuration;
   &:hover {
     #{$property}: $toValue;
-  }
-}
-
-@mixin on-sm {
-  // альтернатива медіа запитам вище
-  // юзати всередині селектора, наприклад .my-class { @include on-sm { color: red; } }
-  @media (min-width: 576px) {
-    @content;
-  }
-}
-@mixin on-md {
-  @media (min-width: 768px) {
-    @content;
-  }
-}
-@mixin on-lg {
-  @media (min-width: 1024px) {
-    @content;
-  }
-}
-@mixin on-xl {
-  @media (min-width: 1200px) {
-    @content;
   }
 }
 
@@ -76,12 +52,11 @@ $breakpoints: (
   column-gap: 16px;
   grid-template-columns: repeat(var(--columns), 1fr);
 
-  @include on-sm {
+  @include media-query(md) {
     --columns: 8;
   }
-  @include on-lg {
+  @include media-query(lg) {
     --columns: 12;
     column-gap: 20px;
   }
 }
-// #endregion
