--- a/frontend/src/app/styles/_variables.scss
+++ b/frontend/src/app/styles/_variables.scss
@@ -2,9 +2,11 @@ $hover-light-red: #f14156;
 $hover-red: #ef233c;
 $main: #181516;
 $footer: #020301;
+$red-text: #ef233c;
 $black-text: #020301;
 $white-text: #f9f9f9;
 $subscription-margin-bottom: 8px;
+$mobile-font-size: 16px;
 $desktop-font-size: 20px;
 
 $padd-inl-phone: 24px;
