--- a/frontend/src/widgets/Footer/footer.module.scss
+++ b/frontend/src/widgets/Footer/footer.module.scss
@@ -4,138 +4,163 @@
 .footer {
   display: flex;
   flex-direction: column;
-  padding: 24px;
+  background-color: $footer;
+
+  &_mob {
+    gap: 16px;
+    padding-block: 18px;
+  }
+  &_desk {
+    gap: 48px;
+    padding-block: 40px;
+  }
 }
 
-.footer__header {
+// #region mobile styles
+.mob_logoTitle {
   display: flex;
-  margin-bottom: 16px;
+  gap: 20px;
+  align-items: center;
+  &__title {
+    font-size: $mobile-font-size;
+
+    @include media-query(md) {
+      font-size: 24px;
+    }
+  }
 }
 
-.footer_icons {
+.mob_iconsContainer {
   display: flex;
-  gap: 10px;
-  margin-bottom: 16px;
+  justify-content: space-between;
+
+  @include media-query(md) {
+    max-width: 45%;
+  }
 }
 
-.contacts_desktop {
-  display: none;
+.mob_upToDateContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  &__title {
+    font-size: $mobile-font-size;
+    color: $red-text;
+  }
+  &__text {
+    font-size: 14px;
+  }
+  &__form {
+    height: 40px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid $white-text;
+    border-radius: 8px;
+
+    &___input {
+      color: $white-text;
+      background-color: transparent;
+      outline: none;
+    }
+
+    &___icon {
+      width: 26px !important; // прийшлось захардкодити розміри бо сама картинка з фігми має інші розміри а не 24х24
+      height: 16px !important;
+    }
+  }
 }
 
-@include media-query(md) {
-  .footer {
-    display: grid;
-    grid-template-areas:
-      'header links icons'
-      'subscription links contacts'
-      'subscription links paymentIcons';
-    grid-template-columns: auto 1fr 1fr;
-    padding: 80px 80px 40px 80px;
+.mob_bottomContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+
+  &__info {
+    font-size: 12px;
   }
 
-  .footer__header {
-    grid-area: header;
-    margin-bottom: 48px;
-  }
-
-  .footer_subscription {
-    grid-area: subscription;
-  }
-
-  .footer__nav {
-    @include self-align(center);
-    grid-area: links;
-    align-self: center;
-  }
-
-  .footer_icons {
-    @include self-align(end);
-    grid-area: icons;
-  }
-
-  .payment_icons {
-    @include self-align(end);
-    grid-area: paymentIcons;
-  }
-
-  .contacts_desktop {
-    @include self-align(end);
-    grid-area: contacts;
-    flex-direction: column;
+  &__paymentIcons {
+    display: flex;
     gap: 20px;
-    margin-top: 20px;
+  }
+}
+// #endregion
+
+// #region desktop styles
+.desk_sectionContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.desk_iconsContainer {
+  display: flex;
+  gap: 20px;
+}
+
+.desk_logoTitle {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  &__title {
+    font-size: 20px;
   }
 }
 
-.footer_logo {
-  margin-top: -20px;
+.desk_upToDateContainer {
+  display: flex;
+  max-width: 400px;
+  flex-direction: column;
+  gap: 20px;
+
+  &__title {
+    font-size: $desktop-font-size;
+    color: $red-text;
+  }
+  &__text {
+    font-size: 16px;
+  }
+  &__form {
+    height: 40px;
+    max-width: 80%;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid $white-text;
+    border-radius: 8px;
+
+    &___input {
+      color: $white-text;
+      background-color: transparent;
+      outline: none;
+    }
+
+    &___icon {
+      width: 26px !important; // прийшлось захардкодити розміри бо сама картинка з фігми має інші розміри а не 24х24
+      height: 16px !important;
+    }
+  }
 }
 
-.title_footer {
-  font-size: 16px;
-  color: $white-text;
-  margin-left: 18px;
+.desk_nav {
+  // записав їх тут бо в корневому елементі чомусь не працює
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.updates {
-  font-family: 'Lora', sans-serif;
-  color: #ef233c;
-  margin-bottom: $subscription-margin-bottom;
-}
-
-.subscribe {
-  font-size: 14px;
-  margin-bottom: $subscription-margin-bottom;
-}
-
-.copyright_info {
-  @include flex-align(center);
-  font-size: 12px;
-  margin-top: 24px;
-  margin-bottom: $subscription-margin-bottom;
-}
-
-.privacy {
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
-}
-
-.contact {
+.desk_contacts {
+  display: flex;
+  font-style: normal;
+  flex-direction: column;
+  gap: 20px;
   font-size: $desktop-font-size;
 }
 
-.footer_email {
-  margin-left: -20px;
-  margin-bottom: 65px;
+.desk_bottomInfo {
+  font-size: $desktop-font-size;
 }
-
-.payment_icons {
-  @include flex-align(center);
-  gap: 10px;
-}
-
-@include media-query(md) {
-  .title_footer {
-    font-size: $desktop-font-size;
-  }
-
-  .updates {
-    margin-bottom: 20px;
-    font-size: $desktop-font-size;
-  }
-
-  .copyright_info {
-    margin-top: 48px;
-    justify-content: start;
-    font-size: $desktop-font-size;
-  }
-
-  .subscribe {
-    margin-bottom: 20px;
-    font-size: 16px;
-  }
-
-  .icon_hidden_desktop {
-    display: none;
-  }
-}
+// #endregion
