--- a/frontend/src/widgets/Header/header.module.scss
+++ b/frontend/src/widgets/Header/header.module.scss
@@ -3,4 +3,117 @@
 
 .header {
   display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding-top: 50px;
+  padding-bottom: 16px;
+
+  @include media-query(md) {
+    gap: 20px;
+  }
+  @include media-query(lg) {
+    padding-block: 40px;
+  }
+
+  &__topContainer {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+}
+
+.twoIconsMobileContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80px;
+
+  @include media-query(sm) {
+    width: 100px;
+  }
+
+  @include media-query(md) {
+    display: none;
+  }
+}
+
+.nav {
+  display: none;
+  @include media-query(md) {
+    display: flex;
+  }
+}
+
+.threeIconsTabletContainer {
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  width: 160px;
+
+  @include media-query(md) {
+    display: flex;
+  }
+  @include media-query(lg) {
+    display: none;
+  }
+}
+
+.fourIconsDeskContainer {
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  width: 200px;
+
+  @include media-query(lg) {
+    display: flex;
+  }
+}
+
+.mobileStaticForm {
+  position: relative;
+  border: 1px solid $white-text;
+  border-radius: 8px;
+  height: 40px;
+  padding-left: 10px;
+
+  @include media-query(lg) {
+    display: none;
+  }
+
+  &__input {
+    width: 100%;
+    outline: none;
+    line-height: 40px;
+    background-color: transparent;
+    color: $white-text;
+    font-size: 14px;
+  }
+
+  &__icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 16px;
+  }
+}
+
+.popUpForm {
+  display: flex;
+  align-items: center;
+  width: 500px;
+  height: 40px;
+  gap: 20px;
+
+  &__input {
+    width: 100%;
+    outline: none;
+    height: $icon-size-big; // щоб був такої ж висоти як іконки
+    background-color: transparent;
+    color: $white-text;
+  }
+}
+
+.cancelButton {
+  font-size: 18px;
+  @include hover(color, $hover-red, 0.5s);
 }
