main-page 75% complete

--- a/frontend/src/app/styles/_variables.scss
+++ b/frontend/src/app/styles/_variables.scss
@@ -14,3 +14,8 @@ $padd-inl-desk: 80px;
 
 $icon-size-big: 24px;
 $icon-size-small: 16px;
+
+$margin-vertical-mobile: 32px;
+$margin-vertical-tablet: 46px;
+$margin-vertical-desktop: 80px;
+$margin-bottom-big: 48px;
