--- a/frontend/src/app/styles/_mixins.scss
+++ b/frontend/src/app/styles/_mixins.scss
@@ -52,7 +52,7 @@ $breakpoints: (
   column-gap: 16px;
   grid-template-columns: repeat(var(--columns), 1fr);
 
-  @include media-query(md) {
+  @include media-query(sm) {
     --columns: 8;
   }
   @include media-query(lg) {
