--- a/Back/Identity/Views/Home/Index.cshtml
+++ b/Back/Identity/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 @{
-    var version = typeof(Duende.IdentityServer.Hosting.IdentityServerMiddleware).Assembly.GetName().Version.ToString();
+    var version = typeof(Duende.IdentityServer.Hosting.IdentityServerMiddleware).Assembly.GetName().Version.ToString();    
 }
 
 <div class="welcome-page">
@@ -7,7 +7,7 @@
         <div class="col-sm-10">
             <h1>
                 <img class="icon" src="~/icon.jpg">
-                Welcome to IdentityServer4
+                Welcome to Identity Server
                 <small>(version @version)</small>
             </h1>
         </div>
