--- a/Back/Identity/Views/Home/Index.cshtml
+++ b/Back/Identity/Views/Home/Index.cshtml
@@ -5,9 +5,8 @@
 <div class="welcome-page">
     <div class="row page-header">
         <div class="col-sm-10">
-            <h1>
-                <img class="icon" src="~/icon.jpg">
-                Welcome to Identity Server
+            <h1>                
+                Welcome to Duende Identity Server
                 <small>(version @version)</small>
             </h1>
         </div>
