--- a/Back/Identity/Views/Account/Login.cshtml
+++ b/Back/Identity/Views/Account/Login.cshtml
@@ -31,6 +31,14 @@
                                     <input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
                                 </div>
                                 <div class="form-group">
+                                    <div class="form-check">
+                                        <input class="form-check-input" asp-for="RememberLogin">
+                                        <label class="form-check-label" asp-for="RememberLogin">
+                                            Remember My Login
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="form-group">
                                     <button class="btn btn-primary" name="button" value="login">Login</button>
                                     <button
                                         class="btn btn-default" 
