--- a/Back/Identity/Views/Home/Index.cshtml
+++ b/Back/Identity/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="row page-header">
         <div class="col-sm-10">
             <h1>                
-                Welcome to Duende Identity Server
+                Welcome to Identity Server
                 <small>(version @version)</small>
             </h1>
         </div>
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-sm-8">
             <p>
-                IdentityServer publishes a
+                Identity Server publishes a
                 <a href="~/.well-known/openid-configuration">discovery document</a>
                 where you can find metadata and links to all the endpoints, key material, etc.
             </p>
@@ -23,6 +23,11 @@
         <div class="col-sm-8">
             <p>
                 Click <a href="~/grants">here</a> to manage your stored grants.
+            </p>
+        </div>
+        <div class="col-sm-8">
+            <p> 
+                Click <a href="~/Account/Register">here</a> to register a new user. 
             </p>
         </div>
     </div>
