add registration login authentification protect api

--- a/Back/Identity/Views/Home/Index.cshtml
+++ b/Back/Identity/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
         </div>
         <div class="col-sm-8">
             <p> 
-                Click <a href="~/Account/Register">here</a> to register a new user. 
+                Click <a href="~/Account/Register?returnUrl=/Home/Index">here</a> to register a new user.
             </p>
         </div>
     </div>
