--- a/frontend/src/app/styles/_variables.scss
+++ b/frontend/src/app/styles/_variables.scss
@@ -19,3 +19,4 @@ $margin-vertical-mobile: 32px;
 $margin-vertical-tablet: 46px;
 $margin-vertical-desktop: 80px;
 $margin-bottom-big: 48px;
+$anim-duration: 0.3s;
