--- a/frontend/src/widgets/Header/header.module.scss
+++ b/frontend/src/widgets/Header/header.module.scss
@@ -1,6 +1,15 @@
 @import '../../app/styles/mixins.scss';
 @import '../../app/styles/variables.scss';
 
+.container {
+  position: fixed;
+  z-index: 999;
+  background-color: $main;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
 .header {
   display: flex;
   flex-direction: column;
