--- a/frontend/src/widgets/DetailedFilters/DetailedFilters.module.scss
+++ b/frontend/src/widgets/DetailedFilters/DetailedFilters.module.scss
@@ -1,13 +1,21 @@
 @import '../../app/styles/mixins';
 @import '../../app/styles/variables';
 
-.container {
-  border-bottom: 5px solid white !important; // delete
+.sectionsWrapper {
+  position: absolute;
   background-color: $black-text;
   display: flex;
   flex-direction: column;
+  top: 230px; // по іншому ніяк. але ця величина надійна для телефонних екранів
+  bottom: 0;
+  overflow-y: scroll;
   padding-block: 16px;
   gap: 16px;
+  @include media-query(sm) {
+    top: auto;
+    bottom: auto;
+    overflow-y: none;
+  }
   @include media-query(lg) {
     padding-block: 20px;
     gap: 20px;
